syntax = "proto3";

package job.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ydssx/morphix/api/job/v1;jobv1";

service JobService {
  rpc Enqueue(EnqueueRequest) returns (google.protobuf.Empty);
}

message EnqueueRequest {
  JobType job_type = 1;
  bytes payload = 2;
  int64 retry_time = 3;
  google.protobuf.Timestamp process_at = 4;
  google.protobuf.Duration process_in = 5;
  google.protobuf.Timestamp deadline = 6;
}

enum JobType {
  TEST_JOB = 0;
  TEST_CRON_JOB = 1;
}

message PayLoadTest {
  string msg = 1;
}
