syntax = "proto3";

package quote;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ydssx/morphix/api/quote/v1;quotev1";

service QuoteService {
  // 创建报价
  rpc CreateQuote(CreateQuoteRequest) returns (CreateQuoteResponse);

  // 获取报价列表
  rpc GetQuotes(GetQuotesRequest) returns (GetQuotesResponse) {
    option (google.api.http) = {get: "/api/v1/quotes"};
  }

  // 获取单个报价
  rpc GetQuote(GetQuoteRequest) returns (Quote);

  // 获取用户拥有的优惠券列表
  rpc GetUserCoupons(GetUserCouponsRequest) returns (GetUserCouponsResponse);

  // 使用优惠券
  rpc UseCoupon(UseCouponRequest) returns (UseCouponResponse);
}

// 折扣类型
enum DiscountType {
  PERCENTAGE = 0; // 百分比折扣
  FIXED_AMOUNT = 1; // 固定金额折扣
}

// 优惠券
message Coupon {
  string code = 1; // 优惠券代码
  DiscountType discount_type = 2; // 折扣类型
  float value = 3; // 折扣值，百分比或固定金额
  google.protobuf.Timestamp expiration_date = 4;
}

// 报价
message Quote {
  int64 id = 1; // 报价ID
  int64 product_id = 2; // 产品ID
  float base_price = 3; // 基础价格
  float final_price = 4; // 最终价格，包括折扣和优惠券
  google.protobuf.Timestamp date = 5; // 报价日期
  string customer_info = 6; // 客户信息
}

// 创建报价请求
message CreateQuoteRequest {
  string product_id = 1; // 产品ID
  float base_price = 2; // 基础价格
  string customer_info = 3; // 客户信息
  string coupon_code = 4; // 优惠券代码，可选
}

// 创建报价响应
message CreateQuoteResponse {
  string id = 1; // 新创建的报价ID
}

// 获取报价列表请求
message GetQuotesRequest {
  // 可选的查询条件，例如产品ID、日期范围等
  repeated int64 product_ids = 1;
  google.protobuf.Timestamp date_range_start = 2;
  google.protobuf.Timestamp date_range_end = 3;
}

// 获取报价列表响应
message GetQuotesResponse {
  repeated Quote quotes = 1; // 报价列表
}

// 获取单个报价请求
message GetQuoteRequest {
  string id = 1; // 报价ID
}

message GetUserCouponsRequest {
  int32 user_id = 1; // 用户ID
  // 可选的查询条件，例如优惠券状态、日期范围等
  string coupon_status = 2;
  google.protobuf.Timestamp date_range_start = 3;
  google.protobuf.Timestamp date_range_end = 4;
}

message GetUserCouponsResponse {
  repeated UserCoupon user_coupons = 1; // 用户拥有的优惠券列表
}

message UserCoupon {
  int32 coupon_id = 1; // 优惠券ID
  DiscountType discount_type = 2; // 折扣类型
  float discount_value = 3; // 折扣值
  bool used = 4; // 是否已使用
  google.protobuf.Timestamp used_date = 5; // 使用日期
}

message UseCouponRequest {
  int32 user_id = 1; // 用户ID
  int32 coupon_id = 2; // 优惠券ID
}

message UseCouponResponse {
  bool success = 1; // 是否成功使用优惠券
}
